# swarm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: swarm.rb
examples/: multi_agent_walkthrough.md
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: api.rs  app.rs  main.rs  state.rs
frontend/src/components/: agent_node.rs  chat_panel.rs  header.rs  mod.rs  sort_controls.rs  topic_tree.rs
src/: config.rs  db.rs  error.rs  guidance.rs  harness.rs  lib.rs  main.rs  orchestrator.rs  server.rs  types.rs
tests/: cli_json.rs  completions.rs  config.rs  doctor.rs  env_bin_override.rs  integration.rs  manpage.rs  models_offline.rs  parallel_project_isolation.rs  port_conflict.rs
